Simplified service model
