# contract/openapi/auth-service.yaml
@@ -1029,11 +1029,10 @@ components:
       type: object
       required:
         - key
-        - label
+        - required
+        - hidden
       properties:
         key:
-          type: string
-        label:
           type: string
         required:
           type: boolean
@@ -1045,8 +1044,6 @@ components:
         id:
           type: string
         key:
-          type: string
-        label:
           type: string
         required:
           type: boolean
@@ -1089,11 +1086,8 @@ components:
       type: object
       required:
         - authority
-        - label
       properties:
         authority:
-          type: string
-        label:
           type: string
     AuthorityDetail:
       type: object
@@ -1101,8 +1095,6 @@ components:
         id:
           type: string
         authority:
-          type: string
-        label:
           type: string
     AuthorityPage:
       allOf:
@@ -1182,6 +1174,7 @@ components:
         - NOT_FOUND
         - UNAUTHORIZED
         - FORBIDDEN
+        - INVALID_ARGUMENT
         - AUTHORITY_NOT_FOUND
         - INVALID_CAPTCHA
         - INVALID_CREDENTIALS
@@ -1339,6 +1332,9 @@ components:
           type: string
         email:
           type: string
+        createdAt:
+          type: string
+          format: date-time
         confirmed:
           type: boolean
         enabled:
